Text Change and Favicon

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                        Hi, I'm Andrew Crump
                                         </h1>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I like creating and steering growth business that solve big problems; driven by great execution, great products and great culture
+                                       I like to spend my time leading business that solve big problems by focusing on product and growth. I'm driven by great execution, great user experiences and great culture.
                                        </h4>
 
                     </div>
