--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                        Hi, I'm Andrew Crump
                                         </h1>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I like to spend my time leading product and growth in order solve big problems. I'm driven by great execution, great user experiences and great culture. I'm currently the CEO of Mitoo - <a href="https://angel.co/andycru_mp">Learn more</a>
+                                       I like to spend my time leading product and growth in order solve big problems. I'm driven by great execution, great user experiences and great culture. I'm currently the CEO of Mitoo and mentor/advisor at a few places - <a href="https://angel.co/andycru_mp">Learn more</a>
                                        </h4>
 
                     </div>
