--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
                                        Hi, I'm Andrew Crump
                                         </h1>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I like to spend my time leading product and growth in order solve big problems. I'm driven by great execution, great user experiences and great culture. 
+                                       I like to spend my time focused on growth. I'm driven by great execution, great user experiences and great culture.
                                        </h4>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I'm currently the CEO of Mitoo, EIR at Seedcamp, and mentor/advisor at a few places - <a href="https://angel.co/andycru_mp">Learn more</a>
+                                       Recently, I have been the founder/CEO of Mitoo, an EIR at Seedcamp, and mentor/advisor at a few places.
                                        </h4>
-
+                      <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
+                                       Currently, I am advising people on growth and working on something new - <a href="https://angel.co/andycru_mp">Learn more </a>
+                                       </h4>
                     </div>
                   </div>
                 </div>
