--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                        Hi, I'm Andrew Crump
                                         </h1>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I like to spend my time focused on growth. I'm driven by great execution, great user experiences and great culture.
+                                       I like to spend my time focused on growth, but I'm also driven by great execution, great user experiences and great culture.
                                        </h4>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
                                        Recently, I have been the founder/CEO of Mitoo, an EIR at Seedcamp, and mentor/advisor at a few places.
