--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
                                        Hi, I'm Andrew Crump
                                         </h1>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       I like to spend my time focused on growth, but I'm also driven by great execution, great user experiences and great culture.
+                                       Mainly I'm a founder. I like to spend my time focused on growth and product, but I'm also driven by great execution, great user experiences and great culture.
+                                       </h4>\
+                      <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
+                                       Currently, I'm building new startups with our small team at <a href="https://wrkbr.com">WRKBR</a> and helping other startups/scaleups grow via our growth lab <a href="http://grow.beer/">Grow Grow Grow Beer</a> 
                                        </h4>
                       <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       Recently, I have been the founder/CEO of Mitoo, an EIR at Seedcamp, and mentor/advisor at a few places.
+                                       Previously, I was the founder/CEO of Mitoo, an EIR at Seedcamp, and mentor/advisor at a few funds and companies. - <a href="https://angel.co/andycru_mp">Learn more </a>
                                        </h4>
-                      <h4 class="light text-white m-t-5" data-swiper-parallax="-15%" align='left'>
-                                       Currently, I am advising people on growth and working on something new - <a href="https://angel.co/andycru_mp">Learn more </a>
-                                       </h4>
+
                     </div>
                   </div>
                 </div>
